--- a/neural_net/react-flask-app/src/assets/sass/_navigation.scss
+++ b/neural_net/react-flask-app/src/assets/sass/_navigation.scss
@@ -1,3 +1,31 @@
 .site-navigation {
-    
+    height: 65px;
+    width: 100%;
+    background: white;
+    display: flex;
+    // this makes the title appear of left, and list appear to the right
+    justify-content: space-between;
+    color: $text-color;
+
+    // style the title
+    span {
+        font-size: 24px;
+        font-weight: 500;
+        display: flex;
+        align-items: center;
+        margin-left: 30px;
+    }
+
+    // this styles our list, we are able to by nesting ul inside of site-navigation class
+    ul {
+        height: 100%;
+        margin-block-start: 0;
+        margin-block-end: 0;
+        padding-inline-start: 0;
+        // this changes the list items to be in a row
+        display: flex;
+        // this removes the bullet points from the list values
+        list-style-type: none;
+        margin-right: 20px;
+    }
 }
