--- a/neural_net/react-flask-app/src/assets/sass/_variables.scss
+++ b/neural_net/react-flask-app/src/assets/sass/_variables.scss
@@ -1,4 +1,8 @@
 // this file stores any styling variables that will be consistent throughout the app
 
-$text-link: '#2997ff';
-$text-color: '#444';
+$text-link: #2997ff;
+$text-color: #444;
+$text-light: #999;
+
+$background: #f8f9fa;
+$border: #ccc
