--- a/neural_net/react-flask-app/src/assets/sass/_navigation.scss
+++ b/neural_net/react-flask-app/src/assets/sass/_navigation.scss
@@ -36,6 +36,11 @@
             padding: 0 20px 0 20px;
             font-size: 20px;
             color: $text-color;
+
+            // this is a pseudo selector in CSS  which changes the style when we hover over something which is anchor tag in this case
+            &:hover {
+                color: $text-link;
+            }
         }
     }
 }
