--- a/neural_net/react-flask-app/src/assets/sass/base.scss
+++ b/neural_net/react-flask-app/src/assets/sass/base.scss
@@ -2,10 +2,11 @@
 @import './navigation';
 // need to add imports here whenever a new .scss file is created
 
-body {
+html body {
     // give the first font, if it doesn't have it then next font, etc etc
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 500;
     margin: 0;
-    background-color: #f8f9fa;
+    background-color: $background;
+
 }
