Add initial structure for home page. Created a basic card component which is reusable. The idea is to get data from the mock data and then call the card component to create multiple cards using the same code

--- a/neural_net/react-flask-app/src/assets/sass/base.scss
+++ b/neural_net/react-flask-app/src/assets/sass/base.scss
@@ -19,6 +19,7 @@ html body {
     margin: 4em 20px;
 }
 
+// gives a nice gradient fill over images etc
 .overlay::before {
     z-index: 1;
     content: '';
