Added basic card structure which has the image as the card background and all info on top (tags, title, description). Tags comes from mock data and their color comes from style.js. I'm a bakka and didn't realise I'm on an old branch. It's too late now, will switch after

--- a/neural_net/react-flask-app/src/assets/sass/base.scss
+++ b/neural_net/react-flask-app/src/assets/sass/base.scss
@@ -1,5 +1,8 @@
 @import './_variables';
 @import './navigation';
+@import './home';
+@import './create-card';
+@import './card-structure';
 // need to add imports here whenever a new .scss file is created
 
 html body {
