Add correct styling to the cards for the home page which also link to other pages of the app

--- a/neural_net/react-flask-app/src/assets/sass/_home.scss
+++ b/neural_net/react-flask-app/src/assets/sass/_home.scss
@@ -1,6 +1,8 @@
 .home {
     h1 {
         width: 100%;
-        
+        color: $text-color;
+        padding: 1.5em 0;
+        font-size: 16px;
     }
 }
