Add neural-network intro/instructions page, user can either click train the neural net or test the neural net card which will take them to select a colour page

--- a/neural_net/react-flask-app/src/assets/sass/base.scss
+++ b/neural_net/react-flask-app/src/assets/sass/base.scss
@@ -3,6 +3,7 @@
 @import './home';
 @import './create-card';
 @import './card-structure';
+@import './neural-network';
 // need to add imports here whenever a new .scss file is created
 
 html body {
