Add the colours to the select a colour page as rows of 12, using buttons. Set the button background colour to the colour. Will need to add functionality for when a user selects a button, that data is capture i.e what colour was chosen

--- a/neural_net/react-flask-app/src/assets/sass/_neural-network.scss
+++ b/neural_net/react-flask-app/src/assets/sass/_neural-network.scss
@@ -17,4 +17,21 @@
         color: $text-color;
         font-size: 20px;
     }
+
+    .colour-container {
+        margin-top: 40px;
+
+        // .colour-names {
+        //     width: 8%;
+        // }
+        .colour-button {
+            width: 100%;
+            min-height: 30px; 
+            margin-bottom: 10px;
+            // uncomment this if want no borders around colours
+            //border: none;
+            // this rounds off the edges
+            border-radius: 10px; 
+        }
+    }
 }
