--- a/neural_net/react-flask-app/src/assets/sass/_neural-network.scss
+++ b/neural_net/react-flask-app/src/assets/sass/_neural-network.scss
@@ -35,3 +35,14 @@
         }
     }
 }
+
+.colour-selected-div {
+    width: 100%;
+    height: 50px;
+
+    h1 {
+        font-size: 16px;
+        padding-top: 17px;
+        padding-left: 20px;
+    }
+}
