--- a/neural_net/react-flask-app/src/assets/sass/_neural-network.scss
+++ b/neural_net/react-flask-app/src/assets/sass/_neural-network.scss
@@ -36,6 +36,7 @@
     }
 }
 
+// neural-net-size page
 .colour-selected-div {
     width: 100%;
     height: 50px;
@@ -45,4 +46,22 @@
         padding-top: 17px;
         padding-left: 20px;
     }
+}
+
+.plus-minus-button {
+    display: block;
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    border: 1px solid grey;
+    outline: 0;
+
+    i {
+        font-size: 25px;
+        color: $text-light;
+    }
+}
+
+.hidden-layers-title {
+    padding-top: 10px;
 }
