--- a/neural_net/react-flask-app/src/assets/sass/_neural-network.scss
+++ b/neural_net/react-flask-app/src/assets/sass/_neural-network.scss
@@ -62,6 +62,19 @@
     }
 }
 
+.buttons-container {
+    padding-top: 300px;
+}
+
 .hidden-layers-title {
     padding-top: 10px;
+}
+
+#neural-net-size-image {
+    text-align: center;
+    display: block;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    padding-top: 50px;
 }
