Add about us page. Has an image header, and our fb profile images (feel free to change). Includes placeholders for us to change - background, projects, certs, etc

--- a/neural_net/react-flask-app/src/assets/sass/base.scss
+++ b/neural_net/react-flask-app/src/assets/sass/base.scss
@@ -4,6 +4,7 @@
 @import './create-card';
 @import './card-structure';
 @import './neural-network';
+@import './about-us';
 // need to add imports here whenever a new .scss file is created
 
 html body {
