--- a/neural_net/react-flask-app/src/assets/sass/_neural-network.scss
+++ b/neural_net/react-flask-app/src/assets/sass/_neural-network.scss
@@ -9,7 +9,7 @@
         width: 100%;
         color: $text-color;
         font-size: 20px;
-        padding-bottom: 100px;
+        padding-bottom: 50px;
     }
 
     p {
@@ -35,6 +35,47 @@
         }
     }
 }
+
+.header-text-container{
+    position: relative;
+    text-align: center;
+
+    .neural-header-image {
+        width: 100%;
+        height: 240px;
+    }
+
+    .bottom-left {
+        position: absolute;
+        bottom: 8px;
+        left: 16px;
+        color: white;
+        padding-left: 150px;
+
+        // animation
+        overflow: hidden; /* Ensures the content is not revealed until the animation */
+        //border-right: .15em solid orange; /* The typwriter cursor */
+        white-space: nowrap; /* Keeps the content on a single line */
+        margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+        letter-spacing: .15em; /* Adjust as needed */
+        animation: 
+            typing 3.5s steps(40, end),
+            blink-caret .75s step-end infinite;
+    }
+}
+
+/* The typing effect */
+@keyframes typing {
+    from { width: 0 }
+    to { width: 100% }
+}
+  
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+    from, to { border-color: transparent }
+    50% { border-color: orange; }
+}
+
 
 // neural-net-size page
 .colour-selected-div {
