--- a/neural_net/react-flask-app/src/assets/sass/_neural-network.scss
+++ b/neural_net/react-flask-app/src/assets/sass/_neural-network.scss
@@ -159,7 +159,7 @@
     background: pink;
     border-color: $border;
     outline: 0;
-    margin-top: 155px;
+    margin-top: 310px;
 
     i {
         font-size: 40px;
@@ -181,6 +181,11 @@
     padding-left: 10px;
 }
 
+// this moves the 1st to 2nd to last layer container down to middle of page
+.col-lg-8 {
+    margin-top: 225px;
+}
+
 .circle {
     font-family: Verdana;
     overflow: hidden;
@@ -189,7 +194,7 @@
     height: 100px;
     width: 100px;
     border-radius: 50%;
-    margin-top: 140px;
+    margin-top: 310px;
   }
   
   .circle-fill {
