--- a/neural_net/react-flask-app/src/assets/sass/_neural-network.scss
+++ b/neural_net/react-flask-app/src/assets/sass/_neural-network.scss
@@ -156,7 +156,7 @@
     width: 100px;
     height: 100px;
     border-radius: 50%;
-    background: pink;
+    background: white;
     border-color: $border;
     outline: 0;
     margin-top: 310px;
